# mu-haskell-graphql

./: README.md  mu-haskell-try-graphql.cabal  stack.yaml
src/: Main.hs
